web ui: remove lang

--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Dak Lang Playground</title>
+    <title>Dak Playground</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link
       rel="icon"
@@ -45,7 +45,7 @@
   </head>
   <body>
     <header>
-      <h1>Dak Lang Playground</h1>
+      <h1>Dak Playground</h1>
       <div>
         <input id="autoEval" type="checkbox" checked />
         <label for="autoEval">Eval</label>
