autofocus dak textarea

--- a/web/index.html
+++ b/web/index.html
@@ -64,6 +64,7 @@
         autocomplete="off"
         autocapitalize="none"
         spellcheck="false"
+        autofocus
       ></textarea>
       <textarea
         id="jsCode"
