port index.mjs to index.dak

--- a/web/index.html
+++ b/web/index.html
@@ -47,8 +47,8 @@
     <header>
       <h1>Dak Playground</h1>
       <div>
-        <input id="autoEval" type="checkbox" checked />
-        <label for="autoEval">Eval</label>
+        <input id="auto-eval" type="checkbox" checked />
+        <label for="auto-eval">Eval</label>
         <select id="fmt">
           <option value="pretty">Pretty</option>
           <option value="raw">Raw</option>
@@ -58,7 +58,7 @@
     </header>
     <div class="code">
       <textarea
-        id="dakCode"
+        id="dak-code"
         placeholder="Write some Dak..."
         autocorrect="off"
         autocomplete="off"
@@ -67,7 +67,7 @@
         autofocus
       ></textarea>
       <textarea
-        id="jsCode"
+        id="js-code"
         placeholder="Output will show here."
         autocorrect="off"
         autocomplete="off"
