rollup plugin, initial vite based website setup

--- a/packages/website/index.html
+++ b/packages/website/index.html
@@ -79,6 +79,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/source-map@0.7.3/dist/source-map.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/terser/dist/bundle.min.js"></script>
-    <script type="module" src="index.mjs"></script>
+    <script type="module" src="/index.mjs"></script>
   </body>
 </html>
