website: pin terser version

--- a/packages/website/index.html
+++ b/packages/website/index.html
@@ -78,7 +78,7 @@
     <div id="output"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/source-map@0.7.3/dist/source-map.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/terser/dist/bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/terser@5.16.3/dist/bundle.min.js"></script>
     <script type="module" src="/index.mjs"></script>
   </body>
 </html>
